style.css
/*my portfolio stylesheet*/
.inline-block{
    display: inline-block;
    vertical-align: top;
}

div.logo {
    width: -2%;
    padding: 1%;
    text-align: center;    
}
nav  {
    width: 82%;
    padding: 7%;
}
nav ul {
    width: 50%;
    margin-left: auto;
 }
.hero image{
    height: 60px;
    padding: 2px;    
}
div.content {
    width: 800px;
    margin: 0 auto;
}
 footer {
    background-color: #373738;
    padding: center;
}
.topnav {
    overflow: hidden;
    background-color: #333;
  }
 footer ul {
    text-align: center;
 }
 li {
    display:inline-block;
    vertical-align: center;
    padding: 1px;
    justify-content: space-evenly;
      
}


/*meta name="viewport" content="width=device-width, initial-scale=1"
<style>
* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

/* Style the top navigation bar */
/*.topnav {
  overflow: hidden;
  background-color: #333;
}

/* Style the topnav links */
/*.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}
*/

